<resources>
    <string name="app_name">拌料上料系统</string>
    <string name="title_material">物料管理</string>
    <string name="title_bucket">料桶管理</string>
    <string name="title_scan">扫码操作</string>
    <string name="title_statistics">查询统计</string>
    <string name="btn_scan">扫码</string>
    <string name="btn_refresh">刷新</string>
    <string name="btn_add">新增</string>
    <string name="btn_import">导入</string>
    <string name="btn_export">导出</string>
    <string name="btn_search">查询</string>
    <string name="btn_reset">重置</string>
    <string name="hint_material_code">物料编码</string>
    <string name="hint_material_name">物料名称</string>
    <string name="hint_bucket_code">料桶编号</string>
    <string name="hint_keyword">关键字</string>
    <string name="text_no_data">暂无数据</string>
    <string name="text_scan_success">扫码成功</string>
    <string name="text_scan_failed">扫码失败</string>
</resources>